bootstrap/dev/patches/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/argo`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`localhost`) && PathPrefix(`/argo`) && Header(`Content-Type`, `application/grpc`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
